--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,1 +1,8 @@
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../node_modules/bootstrap/scss/bootstrap-grid.scss";
+
+#hhXneed {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  background-color: blue;
+}
